feat: diagram canvas for Domain/Architecture — Epic #263 (issues #264-#272) (#276)
* chore(agora): record issue 228 acceptance blockers

* feat(cobol): close governed reference pipeline gaps

* fix(cobol): block stale and untranslated execution results

* fix(cobol): expose reference pipeline via cli and api

* feat(workbench): scaffold diagram canvas package (#264)

Add @renovatio/diagram-canvas, a reusable React Flow canvas that renders
a view-model (DiagramModel: nodes/edges) and emits view events
(DiagramEvent: nodeMoved/nodeSelected/edgeCreated/nodesPruned) without any
knowledge of the real domain model, the backend API, or Theia.

This is pure plumbing: no mapping from DomainModel/ArchitectureProfileDraft
exists yet, and renovatio-shell-widget.tsx is untouched. That wiring is
issue #265 (Domain UML canvas) and #267 (Architecture graph).

- src/common/diagram-protocol.ts: the DiagramModel/DiagramEvent contract
- src/browser/diagram-canvas.tsx: the DiagramCanvas component (@xyflow/react)
- tests/contract.test.mjs: source-contract tests following the same
  convention as @renovatio/core-ui/tests/contract.test.mjs (regex
  assertions over source -- this workspace has no jsdom/testing-library
  setup; real drag/render verification belongs to the Playwright e2e
  suite once this is wired into a live widget, see README's "Known
  limitation" section)
- README.md: usage from @renovatio/core-ui and design rationale

Verified: npm run build --workspace @renovatio/diagram-canvas succeeds,
npm test --workspace @renovatio/diagram-canvas passes 5/5, and
@renovatio/core-ui's own build+21 tests remain green (no regression).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* feat(workbench): render DomainModel as a UML class diagram (#265)

Add a Diagram/List toggle to the Domain area. Diagram mode (now the
default) renders the DomainModel through @renovatio/diagram-canvas
(#264) with a custom UML class-box node (name, stereotype badge,
properties with required-marker