@@ -4,22 +4,27 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.shark.renovatio.api.dto.ArchitecturePreviewDto;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto;
+import org.shark.renovatio.api.dto.WorkbenchChangeSetDto;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.ArchitectureProfileDraft;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.CanvasNode;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.Change;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.Comparison;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.DependencyDiagnostic;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.DependencyRule;
+import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.ExcludedNode;
+import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.LayoutPosition;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.ManifestEntry;
 import org.shark.renovatio.api.dto.WorkbenchArchitectureCanvasDto.Version;
 import org.shark.renovatio.api.entity.ProjectArchitectureProfileVersionEntity;
@@ -41,6 +46,13 @@ public class WorkbenchArchitectureCanvasService {
     static final String EXT_CLASS_PREFIX = ArchitectureLayoutOverrides.EXT_CLASS_PREFIX;
     static final String EXT_RULES = ArchitectureLayoutOverrides.EXT_RULES;
     private static final List<String> MVC_LAYERS = List.of("controller", "service", "model");
+    private static final Set<String> JAVA_KEYWORDS = Set.of(
+            "abstract", "assert", "boolean", "break", "byte", "case", "catch", "char", "class", "const",
+            "continue", "default", "do", "double", "else", "enum", "extends", "final", "finally", "float",
+            "for", "goto", "if", "implements", "import", "instanceof", "int", "interface", "long", "native",
+            "new", "package", "private", "protected", "public", "return", "short", "static", "strictfp",
+            "super", "switch", "synchronized", "this", "throw", "throws", "transient", "try", "void",
+            "volatile", "while", "true", "false", "null", "_");
 
     private final ProjectRepository projects;
     private final ProjectArchitectureProfileVersionRepository versions;
@@ -136,6 +148,58 @@ public class WorkbenchArchitectureCanvasService {
         return new Comparison(List.copyOf(added), List.copyOf(removed), List.copyOf(changed));
     }
 
+    @Transactional(readOnly = true)
+    public WorkbenchChangeSetDto.CreateRequest generateChangeSetRequest(String projectId) {
+        requireProject(projectId);
+        ProjectArchitectureProfileVersionEntity current = latest(projectId);
+        if (current == null) {
+            throw validation("PROFILE_NOT_SAVED", "architecture", "Save the architecture profile before generating a change set");
+        }
+        ArchitectureProfileDraft draft = deserialize(current);
+        WorkbenchArchitectureCanvasDto canvas = view(projectId, current, draft);
+        List<DependencyDiagnostic> blockers = canvas.dependencyDiagnostics().stream()
+                .filter(diagnostic -> "error".equalsIgnoreCase(diagnostic.severity())).toList();
+        if (!blockers.isEmpty()) throw new ValidationException(blockers);
+        var excluded = draft.excludedNodeIds().stream().map(ExcludedNode::id).collect(Collectors.toSet());
+        // Validate only what will actually become file changes — an excluded
+        // component with an unresolved class/package override must not block
+        // generation of the components that remain (see #276 review).
+        List<ManifestEntry> included = canvas.manifest().stream()
+                .filter(entry -> !excluded.contains(entry.componentId())).toList();
+        validateJavaManifest(included);
+        // Two DIFFERENT components landing on the same manifest path (e.g. a
+        // layer-scoped class override applied to every component in that
+        // layer) would otherwise silently overwrite each other as
+        // WorkbenchChangeSetService applies file changes sequentially (see
+        // #276 review). Multiple artifacts from the SAME component (e.g. a
+        // service's "contract" and "implementation" roles) are a distinct,
+        // pre-existing path-per-role gap, not this bug — excluded here so
+        // this check doesn't reject an otherwise-valid manifest.
+        List<String> crossComponentDuplicates = included.stream()
+                .collect(Collectors.groupingBy(ManifestEntry::path))
+                .entrySet().stream()
+                .filter(entry -> entry.getValue().stream().map(ManifestEntry::componentId).distinct().count() > 1)
+                .map(Map.Entry::getKey).sorted().toList();
+        if (!crossComponentDuplicates.isEmpty()) {
+            throw validation("DUPLICATE_ARTIFACT_PATH", "architecture",
+                    "Multiple components resolve to the same generated path; use component-specific class overrides: "
+                            + String.join(", ", crossComponentDuplicates));
+        }
+        List<WorkbenchChangeSetDto.FileChangeRequest> files = included.stream()
+                .map(entry -> new WorkbenchChangeSetDto.FileChangeRequest(entry.path(), "create",
+                        generatedJavaStub(entry, current.getRevision(), canvas.canonicalHash())))
+                .toList();
+        if (files.isEmpty()) {
+            throw validation("NO_GENERATED_ARTIFACTS", "architecture", "All architecture artifacts are excluded from generation");
+        }
+        return new WorkbenchChangeSetDto.CreateRequest(
+                "Generate Java targets from architecture revision " + current.getRevision(),
+                false,
+                files,
+                List.of("architecture:" + draft.style(), "architecture-revision:" + current.getRevision()),
+                List.of("architectureHash:" + canvas.canonicalHash(), "excludedNodeIds:" + excluded.size()));
+    }
+
     private WorkbenchArchitectureCanvasDto view(String projectId, ProjectArchitectureProfileVersionEntity entity,
                                                 ArchitectureProfileDraft draft) {
         ArchitecturePreviewDto preview = previews.preview(projectId, draft.style(), draft.moduleGrouping());
@@ -149,12 +213,16 @@ public class WorkbenchArchitectureCanvasService {
     private List<CanvasNode> canvas(ArchitecturePreviewDto preview, ArchitectureProfileDraft draft) {
         Map<String, String> packages = draft.packageRoots();
         Map<String, String> suffixes = draft.suffixes();
+        Map<String, ExcludedNode> excluded = draft.excludedNodeIds().stream()
+                .collect(Collectors.toMap(ExcludedNode::id, Function.identity(), (left, right) -> left));
         return preview.components().stream().map(component -> {
             String layer = layer(component.kind().name(), component.name());
             String className = draft.classNames().getOrDefault(component.name(),
-                    draft.classNames().getOrDefault(layer, classBase(component.name()) + suffixes.getOrDefault(layer, "")));
+                    draft.classNames().getOrDefault(layer, classBase(component.name()) + defaultSuffix(suffixes, layer)));
+            ExcludedNode excludedNode = excluded.get(component.id());
             return new CanvasNode(component.id(), layer, component.kind().name(), component.name(),
-                    packages.getOrDefault(layer, packages.get("base")), className, component.id());
+                    packages.getOrDefault(layer, packages.get("base")), className, component.id(),
+                    excludedNode != null, excludedNode == null ? "" : excludedNode.reason());
         }).sorted(Comparator.comparing(CanvasNode::layer).thenComparing(CanvasNode::label)).toList();
     }
 
@@ -170,6 +238,35 @@ public class WorkbenchArchitectureCanvasService {
             return new ManifestEntry(path(packageName, className), artifact.role(), layer, className, packageName,
                     artifact.componentId());
         }).sorted(Comparator.comparing(ManifestEntry::path)).toList();
+    }
+
+    private String generatedJavaStub(ManifestEntry entry, long revision, String architectureHash) {
+        return "package " + entry.packageName() + ";\n\n"
+                + "/**\n"
+                + " * Generated by Renovatio Workbench from architecture revision " + revision + ".\n"
+                + " * Architecture hash: " + architectureHash + "\n"
+                + " * Role: " + entry.role() + "; layer: " + entry.layer() + "; component: " + entry.componentId() + "\n"
+                + " */\n"
+                + "public class " + entry.className() + " {\n"
+                + "}\n";
+    }
+
+    private void validateJavaManifest(List<ManifestEntry> manifest) {
+        List<DependencyDiagnostic> diagnostics = manifest.stream()
+                .flatMap(entry -> {
+                    List<DependencyDiagnostic> entryDiagnostics = new ArrayList<>();
+                    if (!isValidPackageName(entry.packageName())) {
+                        entryDiagnostics.add(new DependencyDiagnostic("error", "INVALID_JAVA_PACKAGE",
+                                entry.componentId(), entry.packageName(), "Package name is not a valid Java package"));
+                    }
+                    if (!isValidJavaIdentifier(entry.className())) {
+                        entryDiagnostics.add(new DependencyDiagnostic("error", "INVALID_JAVA_CLASS",
+                                entry.componentId(), entry.className(), "Class name is not a valid Java identifier"));
+                    }
+                    return entryDiagnostics.stream();
+                })
+                .toList();
+        if (!diagnostics.isEmpty()) throw new ValidationException(diagnostics);
     }
 
     private List<DependencyDiagnostic> dependencyDiagnostics(ArchitecturePreviewDto preview, List<DependencyRule> rules) {
@@ -202,7 +299,7 @@ public class WorkbenchArchitectureCanvasService {
                 resolved.architecture().moduleGrouping(), resolved.runtime().framework(),
                 resolved.persistence().defaultStrategy(), map(extensions, EXT_PACKAGE_PREFIX, defaultsPackages()),
                 map(extensions, EXT_SUFFIX_PREFIX, defaultsSuffixes(resolved.architecture().style())),
-                map(extensions, EXT_CLASS_PREFIX, Map.of()), rules(extensions.get(EXT_RULES))));
+                map(extensions, EXT_CLASS_PREFIX, Map.of()), rules(extensions.get(EXT_RULES)), Map.of(), List.of()));
     }
 
     private MigrationProfile toProfile(MigrationProfile current, ArchitectureProfileDraft draft) {
@@ -234,7 +331,8 @@ public class WorkbenchArchitectureCanvasService {
         Map<String, String> classes = clean(draft.classNames());
         List<DependencyRule> rules = draft.dependencyRules() == null || draft.dependencyRules().isEmpty()
                 ? defaultRules(style) : draft.dependencyRules().stream().map(this::normalizeRule).toList();
-        return new ArchitectureProfileDraft(style, grouping, framework, persistence, packages, suffixes, classes, rules);
+        return new ArchitectureProfileDraft(style, grouping, framework, persistence, packages, suffixes, classes, rules,
+                cleanLayout(draft.layout()), cleanExcluded(draft.excludedNodeIds()));
     }
 
     private DependencyRule normalizeRule(DependencyRule rule) {
@@ -266,14 +364,36 @@ public class WorkbenchArchitectureCanvasService {
     private Map<String, String> merge(Map<String, String> defaults, Map<String, String> values) {
         Map<String, String> result = new LinkedHashMap<>(defaults);
         clean(values).forEach(result::put);
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     private Map<String, String> clean(Map<String, String> values) {
         if (values == null) return Map.of();
         Map<String, String> result = new LinkedHashMap<>();
         values.forEach((key, value) -> { if (!blank(key) && !blank(value)) result.put(key(key), value.trim()); });
+        return Collections.unmodifiableMap(result);
+    }
+
+    private Map<String, LayoutPosition> cleanLayout(Map<String, LayoutPosition> values) {
+        if (values == null || values.isEmpty()) return Map.of();
+        Map<String, LayoutPosition> result = new LinkedHashMap<>();
+        values.entrySet().stream().sorted(Map.Entry.comparingByKey()).forEach(entry -> {
+            if (!blank(entry.getKey()) && entry.getValue() != null
+                    && Double.isFinite(entry.getValue().x()) && Double.isFinite(entry.getValue().y())) {
+                result.put(entry.getKey().trim(), entry.getValue());
+            }
+        });
         return Map.copyOf(result);
+    }
+
+    private List<ExcludedNode> cleanExcluded(List<ExcludedNode> values) {
+        if (values == null || values.isEmpty()) return List.of();
+        Map<String, ExcludedNode> result = new LinkedHashMap<>();
+        values.stream().filter(value -> value != null && !blank(value.id()))
+                .sorted(Comparator.comparing(ExcludedNode::id))
+                .forEach(value -> result.putIfAbsent(value.id().trim(),
+                        new ExcludedNode(value.id().trim(), blank(value.reason()) ? "Excluded from generation" : value.reason().trim())));
+        return List.copyOf(result.values());
     }
 
     private Map<String, String> defaultsPackages() {
@@ -328,6 +448,8 @@ public class WorkbenchArchitectureCanvasService {
         for (DependencyRule rule : draft.dependencyRules()) {
             result.put("dependencyRules." + rule.fromLayer() + "." + rule.toLayer(), rule.allowed() + ":" + rule.reason());
         }
+        draft.layout().forEach((key, value) -> result.put("layout." + key, value.x() + "," + value.y()));
+        draft.excludedNodeIds().forEach(value -> result.put("excludedNodeIds." + value.id(), value.reason()));
         return result;
     }
 
@@ -361,6 +483,17 @@ public class WorkbenchArchitectureCanvasService {
     private boolean blank(String value) { return value == null || value.isBlank(); }
     private String key(String value) { return value.trim().toLowerCase(Locale.ROOT).replaceAll("[^a-z0-9]+", "-"); }
     private String path(String packageName, String className) { return packageName.replace('.', '/') + "/" + className + ".java"; }
+    private boolean isValidPackageName(String value) {
+        return !blank(value) && java.util.Arrays.stream(value.split("\\.")).allMatch(this::isValidJavaIdentifier);
+    }
+    private boolean isValidJavaIdentifier(String value) {
+        if (blank(value) || JAVA_KEYWORDS.contains(value)) return false;
+        if (!Character.isJavaIdentifierStart(value.charAt(0))) return false;
+        for (int i = 1; i < value.length(); i++) {
+            if (!Character.isJavaIdentifierPart(value.charAt(i))) return false;
+        }
+        return true;
+    }
     private String layer(String value, String label) {
         try {
             return ArchitectureLayoutOverrides.from(MigrationProfiles.emptyOverlay())
@@ -375,6 +508,19 @@ public class WorkbenchArchitectureCanvasService {
             if (key.contains("repository")) return "repository";
             return key.contains("adapter") || key.contains("outbound") ? "adapter" : "service";
         }
+    }
+    /** Falls back to a capitalized layer name (e.g. "Controller", "Service")
+     * when the profile has no explicit suffix for a layer, instead of an
+     * empty string. An unconfigured profile (suffixes = {}) previously
+     * collapsed every layer's className to the same classBase(component
+     * name), so a program's Controller/Service/Model all resolved to the
+     * identical generated path and silently overwrote each other (see
+     * #276 review — "Reject duplicate generated artifact paths"). */
+    private String defaultSuffix(Map<String, String> suffixes, String layer) {
+        String configured = suffixes.get(layer);
+        if (configured != null && !configured.isBlank()) return configured;
+        if (layer == null || layer.isBlank()) return "";
+        return Character.toUpperCase(layer.charAt(0)) + layer.substring(1).toLowerCase(Locale.ROOT);
     }
     private String classBase(String value) {
         String compact = value.replaceAll("[^A-Za-z0-9]+", " ").trim();
